--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,14 @@
 
   <dependencies>
 
+    <!-- Setting this here, forces all downstream dependencies to use this version of Log4j.
+			  This is necessary to patch CVE-2021-44832 . -->
+		<dependency>
+		  <groupId>org.apache.logging.log4j</groupId>
+		  <artifactId>log4j-core</artifactId>
+		  <version>2.17.1</version>
+		</dependency>
+
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
     <dependency>
         <groupId>commons-io</groupId>
